# vino-sdk

./: .gitignore  Cargo.toml  Makefile  README.md  WORKSPACE.bazel
crates/vino-codec/: BUILD.bazel  Cargo.toml
crates/vino-entity/: BUILD.bazel  Cargo.toml
crates/vino-entity/src/: entity.rs  lib.rs
crates/vino-macros/: BUILD.bazel  Cargo.toml
crates/vino-macros/src/: lib.rs
crates/vino-packet/: BUILD.bazel  Cargo.toml
crates/vino-packet/src/: error.rs  packet.rs  v0.rs  v1.rs
crates/vino-provider/: BUILD.bazel  Cargo.toml
crates/vino-provider/src/: lib.rs  native.rs  provider_link.rs  provider_output.rs  raw.rs  wasm.rs
crates/vino-provider/src/native/: error.rs  port_sender.rs  provider_output.rs
crates/vino-provider/src/wasm/: error.rs  port_sender.rs  provider_output.rs
crates/vino-transport/: BUILD.bazel  Cargo.toml
crates/vino-transport/src/: error.rs  invocation.rs  lib.rs  message_transport.rs
crates/vino-transport/src/message_transport/: stream.rs  transport_json.rs  transport_map.rs  transport_wrapper.rs
crates/vino-types/: BUILD.bazel  Cargo.toml
crates/vino-types/src/: lib.rs  maps.rs  signatures.rs
crates/vino-types/tests/: interface.json  serde.rs
crates/vino-wapc/: BUILD.bazel  Cargo.toml
crates/vino-wapc/src/: guest.rs
crates/vino-wapc/src/guest/ephemeral/: mod.rs
crates/vino-wapc/src/guest/native/: mod.rs
crates/vino-wapc/src/guest/stateful/: mod.rs
crates/vino-wapc/src/guest/wasm/: error.rs  exports.rs  imports.rs  mod.rs  runtime.rs
crates/wasmflow-boundary/: Cargo.toml
crates/wasmflow-boundary/src/: error.rs  native.rs  wasm.rs
crates/wasmflow-collection-link/: Cargo.toml
crates/wasmflow-component/: Cargo.toml
crates/wasmflow-component/src/guest/ephemeral/: mod.rs
crates/wasmflow-component/src/guest/stateful/: mod.rs
crates/wasmflow-component/src/guest/wasm/: mod.rs  runtime.rs
crates/wasmflow-components/: Cargo.toml  README.md
crates/wasmflow-components/src/: v1.rs
crates/wasmflow-entity/src/: entity.rs
crates/wasmflow-interface/: Cargo.toml
crates/wasmflow-interface/src/: maps.rs
crates/wasmflow-invocation/: Cargo.toml
crates/wasmflow-invocation/src/: invocation.rs
crates/wasmflow-output/: Cargo.toml
crates/wasmflow-output/src/: error.rs  provider_output.rs
crates/wasmflow-packet/: Cargo.toml
crates/wasmflow-packet/src/: lib.rs  packet.rs  v0.rs  v1.rs
crates/wasmflow-packet/tests/: v0.rs
crates/wasmflow-sdk/: Cargo.toml
crates/wasmflow-sdk/src/: v1.rs
crates/wasmflow-streams/: Cargo.toml
crates/wasmflow-streams/src/: error.rs  streams.rs
crates/wasmflow-traits/: Cargo.toml
crates/wasmflow-traits/src/: writable_port.rs
