workspace(name = "vino_sdk")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
http_archive(
    name = "rules_rust",
    sha256 = "7453856d239a004c9e29cde2e45903a068446e4a69501ee7393faf08e1a30403",
    urls = [
        "https://mirror.bazel.build/github.com/bazelbuild/rules_rust/releases/download/0.1.0/rules_rust-v0.1.0.tar.gz",
        "https://github.com/bazelbuild/rules_rust/releases/download/0.1.0/rules_rust-v0.1.0.tar.gz",
    ],
)

load("@rules_rust//rust:repositories.bzl", "rules_rust_dependencies", "rust_register_toolchains", "rust_repositories")

rules_rust_dependencies()

rust_register_toolchains(edition="2021", version="nightly", iso_date="2022-03-21", include_rustc_srcs = True)

load("@rules_rust//crate_universe:defs.bzl", "crates_repository")

crates_repository(
    name = "vino_sdk_cargo_workspace",
    # `generator` is not necessary in official releases.
    # See load satement for `cargo_bazel_bootstrap`.
    lockfile = "//:Cargo.Bazel.lock",
    manifests = [
        "//:Cargo.toml",
        "//crates/vino-codec:Cargo.toml",
        "//crates/vino-entity:Cargo.toml",
        "//crates/vino-macros:Cargo.toml",
        "//crates/vino-packet:Cargo.toml",
        "//crates/vino-provider:Cargo.toml",
        "//crates/vino-transport:Cargo.toml",
        "//crates/vino-types:Cargo.toml",
        "//crates/vino-wapc:Cargo.toml",
    ],
)

load(
    "@vino_sdk_cargo_workspace//:defs.bzl",
    vino_sdk_crate_repositories = "crate_repositories",
)

vino_sdk_crate_repositories()