[package]
name = "vino-provider"
version = "0.9.0"
edition = "2021"
license = "BSD-3-Clause"
description = "SDK for native and WASM Vino components"
documentation = "https://docs.vino.dev"
keywords = ["wasm", "vino", "actor", "flow"]
categories = ["wasm"]
exclude = ["tests/*", ".github/*", ".gitignore"]
authors = ["Jarrod Overson <jsoverson@gmail.com>"]
repository = "https://github.com/vinodotdev/vino-sdk"
homepage = "https://docs.vino.dev"

[badges]
maintenance = { status = "actively-developed" }

[features]
default = []
v1 = ["vino-packet/v1"]
signatures = []

[target.'cfg(target_arch = "wasm32")'.dependencies]
vino-transport = { path = "../vino-transport", version = "0.9.0", features = [] }
vino-wapc = { path = "../vino-wapc", version = "0.9.0", features = ["guest"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
vino-types = { path = "../vino-types", version = "0.9.0" }
async-trait = { version = "0.1" }
thiserror = { version = "1.0" }
tokio = { version = "1", features = ["rt"] }
tracing = { version = "0.1" }
dyn-clone = { version = "1.0" }

[dependencies]
tokio-stream = { version = "0.1", features = [] }
vino-packet = { path = "../vino-packet", version = "0.9.0" }
wasmflow-streams = { path = "../wasmflow-streams", version = "0.9.0", features = [] }
vino-wapc = { path = "../vino-wapc", version = "0.9.0" }
vino-entity = { path = "../vino-entity", version = "0.9.0" }
vino-codec = { path = "../vino-codec", version = "0.9.0" }
vino-types = { path = "../vino-types", version = "0.9.0" }
serde = { version = "1.0", features = ["derive"] }
vino-transport = { path = "../vino-transport", version = "0.9.0", features = [
  "async",
] }

[dev-dependencies]
env_logger = "0.9"
test-log = "0.2.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0"
vino-packet = { path = "../vino-packet", version = "0.9.0", features = ["v1"] }
