[package]
name = "vino-wapc"
version = "0.9.0"
edition = "2021"
license = "BSD-3-Clause"
description = "WaPC-related functions for Vino"
documentation = "https://docs.vino.dev"
keywords = ["wapc", "vino"]
categories = ["wasm"]
exclude = ["tests/*", ".github/*", ".gitignore"]
repository = "https://github.com/vinodotdev/vino-sdk"
homepage = "https://docs.vino.dev"

[badges]
maintenance = { status = "actively-developed" }

[features]
default = []
guest = []

[dependencies]
wasm-rs-async-executor = { git = "https://github.com/vinodotdev/async-executor.git", branch = "run_while", features = [
  "cooperative-browser",
  "debug",
  "requestIdleCallback",
] }
parking_lot = "0.12"
tokio = { version = "1.1", features = ["sync"] }
