[package]
name = "wasmflow-boundary"
version = "0.9.0"
edition = "2021"
license = "BSD-3-Clause"
description = "SDK for native and WASM Vino components"
documentation = "https://docs.vino.dev"
keywords = ["wasm", "vino", "actor", "flow"]
categories = ["wasm"]
exclude = ["tests/*", ".github/*", ".gitignore"]
authors = ["Jarrod Overson <jsoverson@gmail.com>"]
repository = "https://github.com/vinodotdev/vino-sdk"
homepage = "https://docs.vino.dev"

[badges]
maintenance = { status = "actively-developed" }

[features]
v1 = ["vino-packet/v1"]

[target.'cfg(target_arch = "wasm32")'.dependencies]


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]

[dependencies]
vino-codec = { path = "../vino-codec", version = "0.9.0", features = [] }
vino-entity = { path = "../vino-entity", version = "0.9.0", features = [] }
vino-packet = { path = "../vino-packet", version = "0.9.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
vino-transport = { path = "../vino-transport", version = "0.9.0", features = [
  "invocation",
] }

[dev-dependencies]
