[package]
name = "wasmflow-component"
version = "0.9.0"
edition = "2021"
license = "BSD-3-Clause"
description = "WaPC-related functions for Vino"
documentation = "https://docs.vino.dev"
keywords = ["wapc", "vino"]
categories = ["wasm"]
exclude = ["tests/*", ".github/*", ".gitignore"]
repository = "https://github.com/vinodotdev/vino-sdk"
homepage = "https://docs.vino.dev"

[badges]
maintenance = { status = "actively-developed" }

[features]
default = []
guest = []
v1 = ["wasmflow-boundary/v1"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio-stream = { version = "0.1", features = [] }

[dependencies]
cfg-if = "1.0.0"
wasmflow-streams = { path = "../wasmflow-streams", version = "0.9.0", features = [] }
wasmflow-boundary = { path = "../wasmflow-boundary", version = "0.9.0", features = [] }
vino-transport = { path = "../vino-transport", version = "0.9.0", features = [] }
wasmflow-invocation = { path = "../wasmflow-invocation", version = "0.9.0" }
vino-packet = { path = "../vino-packet", version = "0.9.0" }
async-trait = "0.1.53"
wasm-rs-async-executor = { git = "https://github.com/vinodotdev/async-executor.git", branch = "run_while", features = [
  "cooperative-browser",
  "debug",
  "requestIdleCallback",
] }
parking_lot = "0.12"
tokio = { version = "1.1", features = ["sync"] }
serde = { version = "1.0", features = ["derive"] }
