[package]
name = "wasmflow-invocation"
version = "0.9.0"
edition = "2021"
license = "BSD-3-Clause"
description = "SDK for native and WASM Vino components"
documentation = "https://docs.vino.dev"
keywords = ["wasm", "vino", "actor", "flow"]
categories = ["wasm"]
exclude = ["tests/*", ".github/*", ".gitignore"]
authors = ["Jarrod Overson <jsoverson@gmail.com>"]
repository = "https://github.com/vinodotdev/vino-sdk"
homepage = "https://docs.vino.dev"

[badges]
maintenance = { status = "actively-developed" }

[features]

[dependencies]
vino-transport = { path = "../vino-transport", version = "0.9.0" }
wasmflow-packet = { path = "../wasmflow-packet", version = "0.9.0", features = [
  "all",
] }
wasmflow-entity = { path = "../wasmflow-entity", version = "0.9.0" }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["v4", "serde"] }
thiserror = "1.0"

[dev-dependencies]
